fixed overlapping image and text

--- a/src/base/browser/secondary/contextMenu/contextMenu.css
+++ b/src/base/browser/secondary/contextMenu/contextMenu.css
@@ -38,7 +38,7 @@
 }
 
 .menu-item > .menu-item-text {
-    position: absolute;
+    position: relative;
     user-select: none;
     line-height: 30px;
     left: 10px;
